@@ -5,4 +5,5 @@
   <column value="receipt_date" />
   <column value="delivery_date" />
   <column value="checked_out" />
+  <column value="public_trial" />
 </object>
