@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<object name="portal_catalog" meta_type="Task Catalog">
+  <column value="public_trial" />
+</object>
