@@ -19,5 +19,6 @@
         <element value="opengever.base.behaviors.sequence.ISequenceNumberBehavior" />
         <element value="opengever.document.behaviors.IBaseDocument" />
         <element value="opengever.mail.mail.IOGMail" />
+        <element value="opengever.base.behaviors.classification.IClassification" />
     </property>
 </object>
