@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="ftw.mail.mail" meta_type="Dexterity FTI">
+    <property name="behaviors" purge="False">
+        <element value="opengever.base.behaviors.classification.IClassification" />
+    </property>
+</object>
