@@ -4,6 +4,12 @@ Changelog
 3.2.5 (unreleased)
 ------------------
 
+- Added public_trial index and metadata field.
+  [lknoepfel]
+
+- Added IClassification on mail.
+  [lknoepfel]
+
 - Fixed zipexport-enable upgrade step to match the new registry entry.
   With ftw.zipexport 1.2.0 the registry name changes which brakes our upgrade step.
   [lknoepfel]
